--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<script type="text/javascript" src="js/jssor.slider.js"></script>
 	<script type="text/javascript" src="js/TweenMax.min.js"></script>
 	<script type="text/javascript" src="js/swipe.js"></script>
+	<script type="text/javascript" src="js/jquery.stellar.js"></script>
 	<script type="text/javascript" src="js/carousel.lite.js"></script>
 	<script type="text/javascript" src="js/css3-mediaqueries.js"></script>
 	<script type="text/javascript" src="js/jquery.maskedinput.min.js"></script>
@@ -34,34 +35,148 @@
 </head>
 <body>
 	<ul class="ps-lines">
-		<li class="v" style="margin-left:-501px"></li>
-		<li class="v" style="margin-left:500px"></li>
+		<li class="v" style="margin-left:-491px"></li>
+		<li class="v" style="margin-left:490px"></li>
 		<li class="v" ></li>
 	</ul>
 	<div class="b b-1">
 		<div class="b-block">
-			<div class="b-logo-cont left">
-				<div class="b-logo-text left blue">ФРАНШИЗА "ELECTROFROG"<br/>ОТ КРУПНЕЙШЕГО ЗАВОДА ЗАО "ЛИТМАШДЕТАЛЬ"</div>
+			<div class="b-top clearfix">
+				<div class="b-logo-cont left clearfix">
+					<a href="#" class="left b-burger-button"></a>
+					<a href="#"><img src="i/logo.png" class="left" alt=""></a>
+					<div class="b-logo-text left">ОСВЕЩЕНИЕ ЗДАНИЙ<br>И СООРУЖЕНИЙ</div>
+				</div>
+				<div class="b-date-cont right clearfix">
+					<p class="left">Звонок по России<br>бесплатный</p>
+					<h2 class="left">8 (800) 555 15 24</h2>
+				</div>
 			</div>
-			<div class="b-date-cont right">
-				<h2 class="blue">8 (800) 555 15 24</h2>
-				<p class="right"><a href="#" class="b-get-callback b-orange-butt">Заказать звонок</a></p>
-			</div>
+			<h1>Архитектурное<br>освещение зданий<br>и сооружений по<br>всей России</h1>
+			<h4>Проектирование, поставка, монтаж.<br>Юридическая гарантия сроков</h4>
+			<div class="b-line b-line-1"></div>
+			<ul class="b-pips">
+				<li class="b-pip-1">
+					<h3>56</h3>
+					<p>прямых контрактов с<br>заводами по всему миру</p>
+					<span></span>
+				</li>
+				<li class="b-pip-2">
+					<h3>1-е</h3>
+					<p>Объекты с нашим<br>освещением принимают<br>1-е лица государства</p>
+					<span></span>
+				</li>
+				<li class="b-pip-3">
+					<span></span>
+					<p>Поставили и смонтировали<br>светильники для здания<br>Сбербанка в г. Самара<br><a href='#'>Подробнее</a></p>
+				</li>
+			</ul>
 		</div>
 	</div>
 	<div class="b b-2">
-		<div class="b-block">
-			
+		<div class="b-block clearfix">
+			<div class="left">
+				<a href="#" class="b-comm-butt">
+					<b>Получить коммерческое<br>предложение</b>
+					<span>pdf, 2.5 мб.</span>
+				</a>
+			</div>
+			<div class="right">
+				<img src="i/book-8.png" alt="">
+			</div>
 		</div>
 	</div>
-	<div class="b b-3">
+	<div class="b b-3" data-stellar-background-ratio="0.5">
 		<div class="b-block">
-			
+			<h2 class="b-title">Почему архитектурное освещение<br>от 500lux — это лучший выбор для<br>вашего объекта?</h2>
+			<h4 class="b-subtitle">Поставим светильники, либо решим задачу освещения «под ключ»</h4>
+			<img src='i/logo.png' class="b-logo"/>
+			<div class="b-line b-line-3"></div>
+			<ul class="b-pips clearfix">
+				<li>
+					<span></span>
+					<h3>Монтаж</h3>
+					<p>За 3 дня выведем на ваш<br>объект до 12 монтажников<br>4-го разряда с опытом от<br>5 лет.</p>
+				</li>
+				<li>
+					<span></span>
+					<h3>Поставка и логистика</h3>
+					<p>Доставка по всей России за<br>наш счет. Также самолетные<br>доставки при необходимости.</p>
+				</li>
+				<li>
+					<span></span>
+					<h3>Разработка</h3>
+					<p>Проект освещения под ключ.<br>В команде личный менеджер<br>проекта, 2 светодизайнера,<br>архитектор, 2 проектировщика,<br>логист, руководитель<br>монтажной группы.</p>
+				</li>
+				<li>
+					<span></span>
+					<h3>Заводы-производители</h3>
+					<p>56 прямых контрактов с<br>заводами-производителями в<br>России, Европе, США и Азии.</p>
+				</li>
+			</ul>
 		</div>
 	</div>
 	<div class="b b-4">
 		<div class="b-block">
-			
+			<h2 class="b-title">Мы сэкономили на освещении<br>нашим заказчикам свыше 27 млн руб.<br>за последние полгода</h2>
+			<h4 class="b-subtitle">Оптимизировали смету в каждом проекте в среднем на 29% за счет подбора<br>аналогичного оборудования на других завода</h4>
+			<div class="b-case clearfix">
+				<div class="left">
+					<ul class="b-left-thumbs b-case-thumbs">
+						<li class="active">
+							<h5>01.</h5>
+							<h6>Сбербанк России</h6>
+						</li>
+						<li>
+							<h5>02.</h5>
+							<h6>Гранд-отель Mariott</h6>
+						</li>
+						<li>
+							<h5>03.</h5>
+							<h6>Экспериментальный дом</h6>
+						</li>
+					</ul>
+				</div>
+				<div class="right b-slider b-case-slider">
+					<div class="b-slide">
+						<div class="b-gallery">
+							<img src="i/b-4/1/img.jpg" alt="">
+						</div>
+						<div class="b-case-desc">
+							<h3>Сократили смету на 42% и поставили<br>светильники на 4 недели быстрее</h3>
+							<div class="clearfix">
+								<div class="left">
+									<div class="b-task clearfix">
+										<h5>Задача</h5>
+										<h6>Фирменный стиль Сбербанка в освещении</h6>
+										<p>Разработать архитектурно-художественное освещение, в котором узнавались бы фирменные цвета Сбербанка. Подчеркнуть контуры здания и уложиться в бюджет.</p>
+									</div>
+									<div class="b-task clearfix">
+										<h5>Результат</h5>
+										<h6>8 млн руб. экономии без изменения РД</h6>
+										<p>1. Мы сэкономили 4 недели — подобрали светильники 1 в 1 как в спецификации.<br><br>2. На свет было выделено 33 кВт, наши светильники потребляют 19 кВт.<br><br>3. Смета сократилась на 42%: с 19 млн руб.<br>до 11 млн.</p>
+									</div>
+									<div class="tleft">
+										<a href="#" class="b-green-butt">Подробнее</a>
+									</div>
+								</div>
+								<ul class="right b-object">
+									<li>
+										<div class="b-img" style="background-image: url('i/b-4/1/man.jpg');"></div>
+										<h5>Объект принимал</h5>
+										<h6>Г.Греф</h6>
+									</li>
+									<li>
+										<div class="b-img" style="background-image: url('i/b-4/1/gerb.png');"></div>
+										<h5>Объект принимала</h5>
+										<h6>администрация города</h6>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="b b-5">
