--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<div class="b-block">
 			<div class="b-top clearfix">
 				<div class="b-logo-cont left clearfix">
-					<a href="#" class="left b-burger-button"></a>
+					<a href="#" class="left b-burger-button"><span></span></a>
 					<a href="#"><img src="i/logo.png" class="left" alt=""></a>
 					<div class="b-logo-text left">ОСВЕЩЕНИЕ ЗДАНИЙ<br>И СООРУЖЕНИЙ</div>
 				</div>
@@ -68,7 +68,7 @@
 				</li>
 				<li class="b-pip-3">
 					<span></span>
-					<p>Поставили и смонтировали<br>светильники для здания<br>Сбербанка в г. Самара<br><a href='#'>Подробнее</a></p>
+					<p>Поставили и смонтировали<br>светильники для здания<br>Сбербанка в г. Самара<br><a href='#' class="b-white-link">Подробнее</a></p>
 				</li>
 			</ul>
 		</div>
@@ -179,10 +179,103 @@
 			</div>
 		</div>
 	</div>
-	<div class="b b-5">
-		<div class="b-block">
-			
+	<div class="b b-5" data-stellar-background-ratio="0.5">
+	<!-- <div class="b b-5"> -->
+		<div class="b-block b-absolute b-top-block">
+			<h2 class="b-title">Осуществляем полный цикл работ от<br>разработки технического задания до<br>обслуживания светильников</h2>
+			<h4 class="b-subtitle">Ознакомьтесь с 6-ю этапами решения задачи по архитектурному освещению</h4>
+			<div class="b-line b-line-5"></div>
+			<ul class="b-steps">
+				<li class="active">
+					<div><span>1</span></div>
+					<p>Сбор информации</p>
+				</li>
+				<li>
+					<div><span>2</span></div>
+					<p>Проектирование</p>
+				</li>
+				<li>
+					<div><span>3</span></div>
+					<p>Электропроект (РД)</p>
+				</li>
+				<li>
+					<div><span>4</span></div>
+					<p>Поставка</p>
+				</li>
+				<li>
+					<div><span>5</span></div>
+					<p>Монтаж</p>
+				</li>
+				<li>
+					<div><span>6</span></div>
+					<p>Обслуживание</p>
+				</li>
+			</ul>
+			<span class="b-way-nav b-way-nav-left"></span>
+			<span class="b-way-nav b-way-nav-right"></span>
 		</div>
+		<ul class="b-way-list">
+			<li class="b-way b-way-1" id="b-way-1">
+				<div class="b-block">
+					<div class="b-book"></div>
+					<div class="b-shine"></div>
+					<div class="b-text-cont">
+						<h3>Собираем информацию и формируем техническое задание по 17 пунктам:</h3>
+						<p><span>01.</span>Выявление ключевых задач объекта</p>
+						<p><span>02.</span>Изучение объекта</p>
+						<p><span>03.</span>Изучение истории бренда</p>
+						<p><span>04.</span>Изучение световой и архитектурной среды территории</p>
+						<a href="#" class="b-white-link">Смотреть все пункты</a>
+					</div>
+				</div>
+			</li>
+			<li class="b-way b-way-3" id="b-way-3">
+				<div class="b-block">
+					<div class="b-lamp"></div>
+					<div class="b-shine"></div>
+					<div class="b-text-cont">
+						<h3>Предоставим до 10 светильников на тест-драйв бесплатно. В согласование проекта также входит:</h3>
+						<p><span>01.</span>Презентация образцов продукции.</p>
+						<p><span>02.</span>Экскурсия на фабрику-производителя</p>
+						<p><span>03.</span>Монтаж нескольких светильников. Демонстрация,<br>как это будет выглядеть на фасаде.</p>
+						<p><span>04.</span>Утверждение концепции.</p>
+					</div>
+				</div>
+			</li>
+			<li class="b-way b-way-4" id="b-way-4">
+				<div class="b-block">
+					<div class="b-shine"></div>
+					<div class="b-map"></div>
+					<div class="b-text-cont">
+						<h3>Подберем идеальное оборудование<br>под вашу задачу из 11 000 изделий<br>на 56-ти заводах!</h3>
+						<div class="b-list clearfix">
+							<p><span>01.</span>Сохраняем качество и<br>экономим до 35% за счет<br>подбора аналогичных изделий.</p>
+							<p><span>02.</span>Юридически гарантируем<br>срок поставки.</p>
+							<p><span>03.</span>Поставляем на 5% больше,<br>чтобы сэкономить время<br>в случае поломки на стройке.</p>
+						</div>
+					</div>
+				</div>
+			</li>
+			<li class="b-way b-way-5" id="b-way-5">
+				<div class="b-block">
+					<div class="b-workers"></div>
+					<div class="b-text-cont">
+						<h3>За 3 дня выведем на ваш объект<br>до 12 монтажников 4-го разряда<br>с опытом от 5 лет</h3>
+						<p>Экономим до 2-х недель. Начинаем монтажные работы параллельно<br>с производством ветильников.</p>
+					</div>
+				</div>
+			</li>
+			<li class="b-way b-way-6" id="b-way-6">
+				<div class="b-block">
+					<div class="b-lamps"></div>
+					<div class="b-shine"></div>
+					<div class="b-text-cont">
+						<h3>Если светильник вышел из строя,<br>мы заменим его за 5 дней</h3>
+						<p>Вам не нужно звонить на завод, ждать 21 рабочий день пока ответят на рекламацию<br>и так далее. Если светильник перегорел, мы в тот же день отправим его на завод и<br>запустим производство нового. Через  5 рабочих дней проблема будет решена.</p>
+					</div>
+				</div>
+			</li>
+		</ul>
 	</div>
 	<div class="b b-6">
 		<div class="b-block">
