--- a/index.html
+++ b/index.html
@@ -39,21 +39,20 @@
 		<li class="v" style="margin-left:490px"></li>
 		<li class="v" ></li>
 	</ul>
-	<div class="menu-overlay">
-		<ul class="top-menu">
-			<li><a href="#">О компании</a></li>
-			<li><a href="#">Наши объекты</a></li>
-			<li><a href="#">5 визуализаций бесплатно</a></li>
-			<li><a href="#">Узкая специализация</a></li>
-			<li><a href="#">Гарантия сроков</a></li>
-			<li><a href="#">Оптимизируем смету на 35%</a></li>
-		</ul>
-	</div>
+	<div class="menu-overlay"></div>
+	<ul class="top-menu">
+		<li class="b-go" data-block=".b-1"><a href="#">О компании</a></li>
+		<li class="b-go" data-block=".b-2"><a href="#">Наши объекты</a></li>
+		<li class="b-go" data-block=".b-3"><a href="#">5 визуализаций бесплатно</a></li>
+		<li class="b-go" data-block=".b-4"><a href="#">Узкая специализация</a></li>
+		<li class="b-go" data-block=".b-4"><a href="#">Гарантия сроков</a></li>
+		<li class="b-go" data-block=".b-4"><a href="#">Оптимизируем смету на 35%</a></li>
+	</ul>
 	<div class="b b-1">
 		<div class="b-block">
 			<div class="b-top clearfix">
 				<div class="b-logo-cont left clearfix">
-					<a href="#" class="left b-burger-button"><span></span></a>
+					<div class="b-burger-button-cont left"><a href="#" class="b-burger-button"><span></span></a></div>
 					<a href="#"><img src="i/logo.png" class="left" alt=""></a>
 					<div class="b-logo-text left">ОСВЕЩЕНИЕ ЗДАНИЙ<br>И СООРУЖЕНИЙ</div>
 				</div>
