--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	<div class="b b-2">
 		<div class="b-block clearfix">
 			<div class="left">
-				<a href="#" class="fancy b-comm-butt" data-block="#b-popup-commerse2">
+				<a href="#" class="fancy b-comm-butt" data-block="#b-popup-text">
 					<b>Получить коммерческое<br>предложение</b>
 					<span>pdf, 2.5 мб.</span>
 				</a>
@@ -387,7 +387,7 @@
 							<input type="text" id="email4" name="email" required placeholder="mail@mail.ru">
 							<label for="tel4">Телефон для уточнения деталей</label>
 							<input type="text" id="tel4" name="phone" required placeholder="+7 (___) ___-__-__">
-							<input type="hidden" name="subject" value="Консультация">
+							<input type="hidden" name="subject" value="Пример коммерческого предложения">
 							<input type="submit" class="ajax b-green-butt" value="Скачать пример предложения">
 						</div>
 					</form>
@@ -397,30 +397,88 @@
 	</div>
 	<div id="b-popup-visual">
 		<div class="for_all b-popup commerse-cont">
-			<h3>Скачайте пример нашего<br>коммерческого предложения</h3>
+			<h3>Получите 5 вариантов визуализации Вашего<br>объекта стоимостью 47 000 руб. за наш счет<br>в течение 5-ти дней</h3>
 			<div class="commerse clearfix">
 				<div class="left"></div>
 				<div class="right">
-					<h4><span>Заполните форму,</span><br>и пример коммерческого предложения<br>будет выслан вам на почту</h4>
+					<h4><span>Оставьте заявку,</span><br>на разработку визуализаций<br>прямо сейчас</h4>
 					<form action="kitsend.php" method="POST">
 						<div class="b-popup-form">
-							<label for="email4">Введите Ваш E-mail</label>
-							<input type="text" id="email4" name="email" required placeholder="mail@mail.ru">
-							<label for="tel4">Телефон для уточнения деталей</label>
-							<input type="text" id="tel4" name="phone" required placeholder="+7 (___) ___-__-__">
-							<input type="hidden" name="subject" value="Консультация">
-							<input type="submit" class="ajax b-green-butt" value="Скачать пример предложения">
+							<label for="name5">Введите Ваше имя</label>
+							<input type="text" id="name5" name="name" required placeholder="Иван Иванов">
+							<label for="email5">Введите Ваш E-mail</label>
+							<input type="text" id="email5" name="email" required placeholder="mail@mail.ru">
+							<label for="tel5">Телефон для уточнения деталей</label>
+							<input type="text" id="tel5" name="phone" required placeholder="+7 (___) ___-__-__">
+							<input type="hidden" name="subject" value="5 визуализаций">
+							<input type="submit" class="ajax b-green-butt" value="Получить 5 визуализаций">
 						</div>
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>
+	<div id="b-popup-commerse-ex">
+		<div class="for_all b-popup commerse-cont">
+			<h3>Коммерческое предложение содержит:</h3>
+			<ul class="tz-list">
+				<li><span>01.</span>До 10 визуализаций</li>
+				<li><span>02.</span>Расчет срока поставки</li>
+				<li><span>03.</span>Оптимизация сметы до 35%</li>
+				<li><span>04.</span>Расстановка светильников на объекте</li>
+				<li><span>05.</span>Пример внешнего вида светильников</li>
+				<li><span>06.</span>Паспорта на светильники</li>
+				<li><span>07.</span>Фотографии реализованных объектов с такими же светильниками</li>
+				<li><span>08.</span>Пилотный светотехнический расчет</li>
+			</ul>
+			<form action="kitsend.php" method="POST">
+				<input type="submit" class="ajax b-green-butt" value="Скачать пример предложения">
+			</form>
+		</div>
+	</div>
+	<div id="b-popup-tz">
+		<div class="for_all b-popup commerse-cont clearfix">
+			<ul class="tz-list right">
+				<li><span>01.</span>Выявление ключевых задач объекта</li>
+				<li><span>02.</span>Изучение объекта</li>
+				<li><span>03.</span>Изучение истории бренда</li>
+				<li><span>04.</span>Изучение световой и архитектурной среды территории</li>
+				<li><span>05.</span>Осмотр объекта</li>
+				<li><span>06.</span>Снятие замеров</li>
+				<li><span>07.</span>Получение чертежей</li>
+				<li><span>08.</span>Проверка соответствия чертежей действительности</li>
+				<li><span>09.</span>Изучение материалов фасада: цвет и текстура</li>
+				<li><span>10.</span>Расчет энергобюджета и подбор светильников</li>
+				<li><span>11.</span>Проверка разрешающих документов</li>
+				<li><span>12.</span>Определение сроков реализации проекта</li>
+				<li><span>13.</span>Определение допустимого финансового бюджета</li>
+				<li><span>14.</span>Определение брендов-производителей</li>
+				<li><span>15.</span>Формирование ТЗ для светодинамики</li>
+				<li><span>16.</span>Формирование ТЗ для системы управления освещением</li>
+				<li><span>17.</span>Утверждение ТЗ для разработки внешнего вида здания</li>  
+			</ul>
+		</div>
+	</div>
+	<div id="b-popup-text">
+		<div class="for_all b-popup popup-text commerse-cont clearfix">
+			<h3>Политика конфиденциальности:</h3>
+			<p>Наши службы можно использовать разными способами — искать и распространять информацию, общаться с людьми, а также создавать новую информацию. Когда вы предоставляете нам данные, например регистрируя аккаунт Google, мы используем их для того, чтобы усовершенствовать свои службы. Благодаря этим данным мы показываем более релевантные результаты поиска и рекламу, способствуем вашему общению и обеспечиваем возможность легко и быстро делиться информацией. В то же время мы хотим, чтобы вы четко представляли себе, как используются ваши данные и каким образом вы можете защитить их конфиденциальность.</p>
+			<h4>Политика конфиденциальности объясняет:</h4>
+			<ul>
+				<li>какие данные мы собираем и зачем;</li>
+				<li>как мы используем собранные данные;</li>
+				<li>какие существуют варианты доступа к данным и их обновления.</li>
+			</ul>
+			<p>Мы постарались изложить все как можно проще, но если вы не знаете, что такое файл cookie, IP-адрес, пиксельный тег или браузер, изучите сначала список основных терминов. Google серьезно относится к конфиденциальности ваших данных, поэтому независимо от того, новичок вы или опытный пользователь, обязательно ознакомьтесь с нашими правилами и при необходимости задайте вопросы.</p>
+		</div>
+	</div>
 	<div id="b-popup-2">
 		<div class="b-thanks b-popup">
-			<h3>Спасибо!</h3>
-			<h4>Ваша заявка успешно отправлена.<br/>Наш менеджер свяжется с Вами в течение часа.</h4>
-			<input type="submit" class="b-orange-butt" onclick="$.fancybox.close(); return false;" value="Закрыть">
+			<h3>Спасибо за оказанное<br>доверие!</h3>
+			<h4>Мы свяжемся с Вами в ближайшее время.<br>Время работы нашего офиса — c понедельника<br>по пятницу с 9:00 до 20:00 по Москве</h4>
+			<h4>Если у Вас есть срочный вопрос, звоните<br>нам по телефону:<br><b></h4>
+			<h5><span>8 (800) 38-81-880</span><br>бесплатно по России</h5>
+			<h6>С уважением,<br>Сергей Ренжин<br>директор ООО «500 люкс»</h6>
 		</div>
 	</div>
 	<div id="b-popup-error">
