--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	<div class="b b-2">
 		<div class="b-block clearfix">
 			<div class="left">
-				<a href="#" class="fancy b-comm-butt" data-block="#b-popup-text">
+				<a href="#" class="fancy b-comm-butt" data-block="#b-popup-commerse2">
 					<b>Получить коммерческое<br>предложение</b>
 					<span>pdf, 2.5 мб.</span>
 				</a>
@@ -355,7 +355,7 @@
 		<div class="for_all b-popup commerse-cont">
 			<h3>Получите коммерческое предложение<br>и узнайте, как сократить смету на 35%</h3>
 			<div class="commerse clearfix">
-				<div class="left"></div>
+				<div class="left">Посмотреть содержание</div>
 				<div class="right">
 					<h4><span>Оставьте заявку</span><br>на разработку коммерческого предложения</h4>
 					<form action="kitsend.php" method="POST">
@@ -378,7 +378,7 @@
 		<div class="for_all b-popup commerse-cont">
 			<h3>Скачайте пример нашего<br>коммерческого предложения</h3>
 			<div class="commerse clearfix">
-				<div class="left"></div>
+				<div class="left">Посмотреть содержание</div>
 				<div class="right">
 					<h4><span>Заполните форму,</span><br>и пример коммерческого предложения<br>будет выслан вам на почту</h4>
 					<form action="kitsend.php" method="POST">
