--- a/index.html
+++ b/index.html
@@ -185,6 +185,80 @@
 							</div>
 						</div>
 					</div>
+					<div class="b-slide">
+						<div class="b-gallery">
+							<img src="i/b-4/1/img.jpg" alt="">
+						</div>
+						<div class="b-case-desc">
+							<h3>Сократили смету на 42% и поставили<br>светильники на 4 недели быстрее</h3>
+							<div class="clearfix">
+								<div class="left">
+									<div class="b-task clearfix">
+										<h5>Задача</h5>
+										<h6>Фирменный стиль Сбербанка в освещении</h6>
+										<p>Разработать архитектурно-художественное освещение, в котором узнавались бы фирменные цвета Сбербанка. Подчеркнуть контуры здания и уложиться в бюджет.</p>
+									</div>
+									<div class="b-task clearfix">
+										<h5>Результат</h5>
+										<h6>8 млн руб. экономии без изменения РД</h6>
+										<p>1. Мы сэкономили 4 недели — подобрали светильники 1 в 1 как в спецификации.<br><br>2. На свет было выделено 33 кВт, наши светильники потребляют 19 кВт.<br><br>3. Смета сократилась на 42%: с 19 млн руб.<br>до 11 млн.</p>
+									</div>
+									<div class="tleft">
+										<a href="#" class="b-green-butt">Подробнее</a>
+									</div>
+								</div>
+								<ul class="right b-object">
+									<li>
+										<div class="b-img" style="background-image: url('i/b-4/1/man.jpg');"></div>
+										<h5>Объект принимал</h5>
+										<h6>Г.Греф</h6>
+									</li>
+									<li>
+										<div class="b-img" style="background-image: url('i/b-4/1/gerb.png');"></div>
+										<h5>Объект принимала</h5>
+										<h6>администрация города</h6>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="b-slide">
+						<div class="b-gallery">
+							<img src="i/b-4/1/img.jpg" alt="">
+						</div>
+						<div class="b-case-desc">
+							<h3>Сократили смету на 42% и поставили<br>светильники на 4 недели быстрее</h3>
+							<div class="clearfix">
+								<div class="left">
+									<div class="b-task clearfix">
+										<h5>Задача</h5>
+										<h6>Фирменный стиль Сбербанка в освещении</h6>
+										<p>Разработать архитектурно-художественное освещение, в котором узнавались бы фирменные цвета Сбербанка. Подчеркнуть контуры здания и уложиться в бюджет.</p>
+									</div>
+									<div class="b-task clearfix">
+										<h5>Результат</h5>
+										<h6>8 млн руб. экономии без изменения РД</h6>
+										<p>1. Мы сэкономили 4 недели — подобрали светильники 1 в 1 как в спецификации.<br><br>2. На свет было выделено 33 кВт, наши светильники потребляют 19 кВт.<br><br>3. Смета сократилась на 42%: с 19 млн руб.<br>до 11 млн.</p>
+									</div>
+									<div class="tleft">
+										<a href="#" class="b-green-butt">Подробнее</a>
+									</div>
+								</div>
+								<ul class="right b-object">
+									<li>
+										<div class="b-img" style="background-image: url('i/b-4/1/man.jpg');"></div>
+										<h5>Объект принимал</h5>
+										<h6>Г.Греф</h6>
+									</li>
+									<li>
+										<div class="b-img" style="background-image: url('i/b-4/1/gerb.png');"></div>
+										<h5>Объект принимала</h5>
+										<h6>администрация города</h6>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
