--- a/index.html
+++ b/index.html
@@ -363,7 +363,82 @@
 	</div>
 	<div class="b b-6">
 		<div class="b-block">
-			
+			<h2 class="b-title">Мы узко специализируемся на<br>архитектурном освещении</h2>
+			<h4 class="b-subtitle">Опыт работы каждого специалиста в архитектурном освещении свыше 7 лет.<br>Разработали более 100 проектов за последние 3 года</h4>
+			<div class="b-staff clearfix">
+				<div class="left">
+					<ul class="b-left-thumbs b-staff-thumbs">
+						<li>
+							<div style="background-image: url('i/b-6/1.png');"></div>
+							<h6>Сергей Максимов</h6>
+							<p>Генеральный директор</p>
+						</li>
+						<li>
+							<div style="background-image: url('i/b-6/2.png');"></div>
+							<h6>Сергей Максимов</h6>
+							<p>Генеральный директор</p>
+						</li>
+						<li>
+							<div style="background-image: url('i/b-6/3.png');"></div>
+							<h6>Сергей Максимов</h6>
+							<p>Генеральный директор</p>
+						</li>
+						<li>
+							<div style="background-image: url('i/b-6/4.png');"></div>
+							<h6>Сергей Максимов</h6>
+							<p>Генеральный директор</p>
+						</li>
+						<li>
+							<div style="background-image: url('i/b-6/5.png');"></div>
+							<h6>Сергей Максимов</h6>
+							<p>Генеральный директор</p>
+						</li>
+						<li>
+							<div style="background-image: url('i/b-6/6.png');"></div>
+							<h6>Сергей Максимов</h6>
+							<p>Генеральный директор</p>
+						</li>
+						<li>
+							<div style="background-image: url('i/b-6/7.png');"></div>
+							<h6>Сергей Максимов</h6>
+							<p>Генеральный директор</p>
+						</li>
+						<li>
+							<div style="background-image: url('i/b-6/8.png');"></div>
+							<h6>Сергей Максимов</h6>
+							<p>Генеральный директор</p>
+						</li>
+					</ul>
+				</div>
+				<div class="right b-slider b-staff-slider">
+					<div class="b-slide">
+						<div class="b-image-cont">
+							<div class="b-image"></div>
+							<h3>Сергей Максимов</h3>
+							<h5>Генеральный директор</h5>
+						</div>
+						<ul class="b-skill">
+							<li>
+								<p>10 лет<br>стажа</p>
+							</li>
+							<li>
+								<p>10 успешно<br>выполненных<br>проектов</p>
+							</li>
+							<li>
+								<p>4 года<br>в компании</p>
+							</li>
+						</ul>
+						<div class="b-desc">
+							<h3>«В 100% случаев можно подобрать<br>более оптимальное оборудование и не только<br>оптимизировать смету, но и срок поставки<br>сделать короче»</h3>
+							<p>Сергей последние 6 лет специализируется на архитектурном и спортивном освещении. По его проектам было освещено свыше 1 миллиона квадратных метров фасадов зданий. Сергей держит в голове сроки изготовления светильников на 56 фабриках и знает 100% ассортимента каждой из них. За 6 лет благодаря подбору аналогичного оборудования в сумме ему удалось сэкономить более 14 миллионов рублей для его клиентов.</p>
+							<p>Ранее работал в таких компаниях как Philips и Эко-свет, с марта 2015 года работает в компании 500lux. С удовольствием ответит на любой технический вопрос.</p>
+						</div>
+						<div class="b-butt-cont">
+							<a href="#" class="b-green-butt">получить консультацию у сергея</a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="b b-7">
