--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1">
 	<link rel="stylesheet" href="css/reset.css" type="text/css">
 	<link rel="stylesheet" href="css/jquery.fancybox.css" type="text/css">
+	<link rel="stylesheet" href="css/slick.css" type="text/css">
 	<link rel="stylesheet" href="css/KitAnimate.css" type="text/css">
 	<link rel="stylesheet" href="css/layout.css" type="text/css">
 	<link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
@@ -26,6 +27,7 @@
 	<script type="text/javascript" src="js/css3-mediaqueries.js"></script>
 	<script type="text/javascript" src="js/jquery.maskedinput.min.js"></script>
 	<script type="text/javascript" src="js/jquery.validate.min.js"></script>
+	<script type="text/javascript" src="js/slick.min.js"></script>
 	<script type="text/javascript" src="js/KitProgress.js"></script>
 	<script type="text/javascript" src="js/KitAnimate.js"></script>
 	<script type="text/javascript" src="js/device.js"></script>
@@ -146,11 +148,16 @@
 							<h6>Экспериментальный дом</h6>
 						</li>
 					</ul>
+					<div class="levo">лево</div>
+					<div class="pravo">право</div>
 				</div>
 				<div class="right b-slider b-case-slider">
 					<div class="b-slide">
 						<div class="b-gallery">
-							<img src="i/b-4/1/img.jpg" alt="">
+							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
 						</div>
 						<div class="b-case-desc">
 							<h3>Сократили смету на 42% и поставили<br>светильники на 4 недели быстрее</h3>
@@ -187,7 +194,10 @@
 					</div>
 					<div class="b-slide">
 						<div class="b-gallery">
-							<img src="i/b-4/1/img.jpg" alt="">
+							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
 						</div>
 						<div class="b-case-desc">
 							<h3>Сократили смету на 42% и поставили<br>светильники на 4 недели быстрее</h3>
@@ -224,7 +234,10 @@
 					</div>
 					<div class="b-slide">
 						<div class="b-gallery">
-							<img src="i/b-4/1/img.jpg" alt="">
+							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
+							<div class="img" style="background-image:url('i/b-4/1/img.jpg');"></div>
 						</div>
 						<div class="b-case-desc">
 							<h3>Сократили смету на 42% и поставили<br>светильники на 4 недели быстрее</h3>
