--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 			<div class="b-staff clearfix">
 				<div class="left">
 					<ul class="b-left-thumbs b-staff-thumbs">
-						<li>
+						<li class="active">
 							<div style="background-image: url('i/b-6/1.png');"></div>
 							<h6>Сергей Максимов</h6>
 							<p>Генеральный директор</p>
@@ -413,11 +413,11 @@
 				<div class="right b-slider b-staff-slider">
 					<div class="b-slide">
 						<div class="b-image-cont">
-							<div class="b-image"></div>
+							<div class="b-image" style="background-image: url('i/b-6/man.png');"></div>
 							<h3>Сергей Максимов</h3>
 							<h5>Генеральный директор</h5>
 						</div>
-						<ul class="b-skill">
+						<ul class="b-skill clearfix">
 							<li>
 								<p>10 лет<br>стажа</p>
 							</li>
