--- a/index.html
+++ b/index.html
@@ -424,6 +424,8 @@
 					</ul>
 				</div>
 				<div class="right b-slider b-staff-slider">
+					<span class="b-staff-nav b-left-butt"></span>
+					<span class="b-staff-nav b-right-butt"></span>
 					<div class="b-slide">
 						<div class="b-image-cont">
 							<div class="b-image" style="background-image: url('i/b-6/man.png');"></div>
